syntax = "proto3";

option go_package = "github.com/CodeYourFuture/immersive-go-course/grpc-client-server/prober";

package prober;

// The prober service definition.
service Prober {
  rpc DoProbes (ProbeRequest) returns (ProbeReply) {}
}

// The request message 
message ProbeRequest {
  string endpoint = 1;
  int32 numberOfRequests = 2;
}

// The response message containing the result
// returns the average response time
message ProbeReply {
  float averageResponseTime = 1;
  int32 failedRequests = 2;
}

